--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-2.4.1.jar=C:\\Users\\Lucas\\Documents\\NetBeansProjects\\universidad\\lib\\mariadb-java-client-2.4.1.jar
+file.reference.mariadb-java-client-2.4.1.jar-1=C:\\Users\\programador\\Documents\\NetBeansProjects\\universidad\\lib\\mariadb-java-client-2.4.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.4.1.jar}
+    ${file.reference.mariadb-java-client-2.4.1.jar}:\
+    ${file.reference.mariadb-java-client-2.4.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
